--- a/airflow/values.yaml
+++ b/airflow/values.yaml
@@ -10,7 +10,7 @@ airflow:
     AIRFLOW__CORE__SQL_ALCHEMY_CONN: "postgresql+psycopg2://postgres:airflow@airflow-postgresql:5432/airflow"
     AIRFLOW__CORE__LOAD_EXAMPLES: "True"
     POSTGRES_HOST: "airflow-postgresql"
-    POSTGRES_PORT: 5432
+    POSTGRES_PORT: "5432"
   ##
   ## You will need to define your fernet key:
   ## Generate fernet_key with:
