--- a/airflow/templates/secrets.yaml
+++ b/airflow/templates/secrets.yaml
@@ -50,7 +50,7 @@ metadata:
     heritage: {{ .Release.Service }}
 type: Opaque
 data:
-  AIRFLOW__CORE__SQL_ALCHEMY_CONN: {{ printf "postgresql+psycopg2://%s:%s@%s/%s" .Values.postgresql.postgresUser .Values.postgresql.postgresPassword (include "airflow.postgresql.fullname" .) .Values.postgresql.postgresDatabase | b64enc | quote }}
+  AIRFLOW__CORE__SQL_ALCHEMY_CONN: {{ printf "postgresql+psycopg2://%s:%s@%s:%.0f/%s" .Values.postgresql.postgresUser .Values.postgresql.postgresPassword (include "airflow.postgresql.fullname" .) .Values.postgresql.service.port .Values.postgresql.postgresDatabase | b64enc | quote }}
   AIRFLOW__CORE__EXECUTOR: S3ViZXJuZXRlc0V4ZWN1dG9y
   AIRFLOW_HOME: {{ printf "/usr/local/airflow" | b64enc | quote }}
   {{- if not .Values.airflow.dags.persistence.enabled }}
@@ -62,12 +62,14 @@ data:
   {{- end }}
   {{- end }}
   FERNET_KEY: {{ .Values.airflow.fernet_key | b64enc | quote }}
+  AIRFLOW__KUBERNETES__ENV_FROM_SECRET_REF: {{ "airflow-env" | b64enc | quote }}
   {{- range $setting, $option := .Values.airflow.config }}
   {{ $setting }}: {{ $option | b64enc | quote }}
   {{- end }}
 
   # For puckel/docker-airflow
   POSTGRES_HOST: {{ include "airflow.postgresql.fullname" . | b64enc | quote }}
+  POSTGRES_PORT: {{ printf "%.0f" .Values.postgresql.service.port | b64enc | quote }}
   POSTGRES_USER: {{ .Values.postgresql.postgresUser | b64enc | quote }}
   POSTGRES_PASSWORD: {{ .Values.postgresql.postgresPassword | b64enc | quote }}
   POSTGRES_DB: {{ .Values.postgresql.postgresDatabase | b64enc | quote }}
