--- a/airflow/templates/secrets.yaml
+++ b/airflow/templates/secrets.yaml
@@ -23,8 +23,16 @@ metadata:
     heritage: {{ .Release.Service }}
 type: Opaque
 data:
-  GIT_SYNC_USERNAME: {{- if .Values.airflow.dags.git.username }}{{ .Values.airflow.dags.git.username | b64enc | quote }}{{- end }}
-  GIT_SYNC_PASSWORD: {{- if .Values.airflow.dags.git.password }}{{ .Values.airflow.dags.git.password | b64enc | quote }}{{- end }}
+  {{- if .Values.airflow.dags.git.username }}
+  GIT_SYNC_USERNAME: {{ .Values.airflow.dags.git.username | b64enc | quote }}
+  {{- else }}
+  GIT_SYNC_USERNAME: ""
+  {{- end }}
+  {{- if .Values.airflow.dags.git.password }}
+  GIT_SYNC_PASSWORD: {{ .Values.airflow.dags.git.password | b64enc | quote }}
+  {{- else }}
+  GIT_SYNC_PASSWORD: ""
+  {{- end }}
 ---
 apiVersion: v1
 kind: Secret
