Making things work with latest k8s

--- a/airflow/Chart.yaml
+++ b/airflow/Chart.yaml
@@ -1,7 +1,7 @@
 description: Airflow running on KubernetesExecutor
 name: airflow
 version: 0.0.1
-appVersion: 2.0.0-dev
+appVersion: 1.10.9
 icon: https://usr/local/airflow.apache.org/_images/pin_large.png
 home: https://usr/local/airflow.apache.org/
 maintainers:
