--- a/airflow/templates/secrets.yaml
+++ b/airflow/templates/secrets.yaml
@@ -9,8 +9,8 @@ metadata:
     heritage: {{ .Release.Service }}
 type: Opaque
 data:
-  postgresUser: {{ .Values.postgresql.postgresUser | b64enc | quote }}
-  postgresPassword: {{ .Values.postgresql.postgresPassword | b64enc | quote }}
+  postgresqlUsername: {{ .Values.postgresql.postgresqlUsername | b64enc | quote }}
+  postgresqlPassword: {{ .Values.postgresql.postgresqlPassword | b64enc | quote }}
 ---
 apiVersion: v1
 kind: Secret
@@ -58,7 +58,7 @@ metadata:
     heritage: {{ .Release.Service }}
 type: Opaque
 data:
-  AIRFLOW__CORE__SQL_ALCHEMY_CONN: {{ printf "postgresql+psycopg2://%s:%s@%s:%.0f/%s" .Values.postgresql.postgresUser .Values.postgresql.postgresPassword (include "airflow.postgresql.fullname" .) .Values.postgresql.service.port .Values.postgresql.postgresDatabase | b64enc | quote }}
+  AIRFLOW__CORE__SQL_ALCHEMY_CONN: {{ printf "postgresql+psycopg2://%s:%s@%s:%.0f/%s" .Values.postgresql.postgresqlUsername .Values.postgresql.postgresqlPassword (include "airflow.postgresql.fullname" .) .Values.postgresql.service.port .Values.postgresql.postgresqlDatabase | b64enc | quote }}
   AIRFLOW__CORE__EXECUTOR: S3ViZXJuZXRlc0V4ZWN1dG9y
   AIRFLOW_HOME: {{ printf "/usr/local/airflow" | b64enc | quote }}
   {{- if not .Values.airflow.dags.persistence.enabled }}
@@ -78,7 +78,7 @@ data:
   # For puckel/docker-airflow
   POSTGRES_HOST: {{ include "airflow.postgresql.fullname" . | b64enc | quote }}
   POSTGRES_PORT: {{ printf "%.0f" .Values.postgresql.service.port | b64enc | quote }}
-  POSTGRES_USER: {{ .Values.postgresql.postgresUser | b64enc | quote }}
-  POSTGRES_PASSWORD: {{ .Values.postgresql.postgresPassword | b64enc | quote }}
-  POSTGRES_DB: {{ .Values.postgresql.postgresDatabase | b64enc | quote }}
+  POSTGRES_USER: {{ .Values.postgresql.postgresqlUsername | b64enc | quote }}
+  POSTGRES_PASSWORD: {{ .Values.postgresql.postgresqlPassword | b64enc | quote }}
+  POSTGRES_DB: {{ .Values.postgresql.postgresqlDatabase | b64enc | quote }}
 
